// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "io/kx/loanapp/domain/loan_app_domain.proto";
import "io/kx/loanapp/api/loan_app_api.proto";


package com.example;

option java_outer_classname = "CounterApi";

enum CounterApiStatus {
  UNDEFINED_STATE = 0;
  STARTED = 1;
  PAUSED = 2;
  RESUMED = 3;
  STOPPED = 4;
}

message IncreaseValue {
  string counter_id = 1 [(kalix.field).entity_key = true];
  int32 value = 2;
}

message DecreaseValue {
  string counter_id = 1 [(kalix.field).entity_key = true];
  int32 value = 2;
}

message ResetValue {
  string counter_id = 1 [(kalix.field).entity_key = true];
}

message GetCounter {
  string counter_id = 1 [(kalix.field).entity_key = true];
}

message CurrentCounter {
  int32 value = 1;
  CounterApiStatus status = 2;
}

service CounterService {
  option (kalix.codegen) = {
    value_entity: {
      name: "com.example.domain.Counter"
      entity_type: "counter"
      state: "com.example.domain.CounterState"
    }
  };
  option (kalix.service).acl.allow = { principal: ALL };

  rpc Increase(IncreaseValue) returns (google.protobuf.Empty);
  rpc Decrease(DecreaseValue) returns (google.protobuf.Empty);
  rpc Reset(ResetValue) returns (google.protobuf.Empty);
  rpc GetCurrentCounter(GetCounter) returns (CurrentCounter);
}
