syntax = "proto3";

package com.example.domain;

option java_outer_classname = "CounterDomain";

enum CounterStatus {
  UNDEFINED_STATE = 0;
  STARTED = 1;
  PAUSED = 2;
  RESUMED = 3;
  STOPPED = 4;
}

message CounterState {
  int32 value = 1;
  CounterStatus status = 2;
}
